// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons|Actions All types 1`] = `
<div>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    Array
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    Boolean
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    Empty Object
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    File
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    Function A
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    Bound Function A
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    Infinity
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    -Infinity
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    NaN
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    null
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    Number
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    Multiple
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    Plain Object
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    Object (depth: 2)
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    RegExp
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    String
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    Symbol
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    SyntheticEvent
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    undefined
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    Window
  </button>
</div>
`;

exports[`Storyshots Addons|Actions Circular Payload 1`] = `
<button
  class="css-1qwzad5 eux70yo0"
>
  Circular Payload
</button>
`;

exports[`Storyshots Addons|Actions Decorated Action (deprecated) 1`] = `
<button
  class="css-1qwzad5 eux70yo0"
>
  Native Event
</button>
`;

exports[`Storyshots Addons|Actions Decorated action + config 1`] = `
<button
  class="css-1qwzad5 eux70yo0"
>
  Moving away from this story will persist the action logger
</button>
`;

exports[`Storyshots Addons|Actions Decorated action 1`] = `
<button
  class="css-1qwzad5 eux70yo0"
>
  Native Event
</button>
`;

exports[`Storyshots Addons|Actions Decorated actions + config 1`] = `
<button
  class="css-1qwzad5 eux70yo0"
>
  Moving away from this story will persist the action logger
</button>
`;

exports[`Storyshots Addons|Actions Decorated actions 1`] = `
<button
  class="css-1qwzad5 eux70yo0"
>
  Native Event
</button>
`;

exports[`Storyshots Addons|Actions Function Name 1`] = `
<button
  class="css-1qwzad5 eux70yo0"
>
  Action.name: fnName
</button>
`;

exports[`Storyshots Addons|Actions Hello World 1`] = `
<button
  class="css-1qwzad5 eux70yo0"
>
  Hello World
</button>
`;

exports[`Storyshots Addons|Actions Limit Action Output 1`] = `
<div>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    False
  </button>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    True
  </button>
</div>
`;

exports[`Storyshots Addons|Actions Multiple actions + config 1`] = `
<button
  class="css-1qwzad5 eux70yo0"
>
  Moving away from this story will persist the action logger
</button>
`;

exports[`Storyshots Addons|Actions Multiple actions 1`] = `
<button
  class="css-1qwzad5 eux70yo0"
>
  Hello World
</button>
`;

exports[`Storyshots Addons|Actions Multiple actions, object + config 1`] = `
<button
  class="css-1qwzad5 eux70yo0"
>
  Moving away from this story will persist the action logger
</button>
`;

exports[`Storyshots Addons|Actions Multiple actions, object 1`] = `
<button
  class="css-1qwzad5 eux70yo0"
>
  Hello World
</button>
`;

exports[`Storyshots Addons|Actions Persisting the action logger 1`] = `
<div>
  <p>
    Moving away from this story will persist the action logger
  </p>
  <button
    class="css-1qwzad5 eux70yo0"
  >
    Object (configured clearOnStoryChange: false)
  </button>
</div>
`;

exports[`Storyshots Addons|Actions Reserved keyword as name 1`] = `
<button
  class="css-1qwzad5 eux70yo0"
>
  Delete
</button>
`;

exports[`Storyshots Addons|Actions configureActionsDepth 1`] = `
<button
  class="css-1qwzad5 eux70yo0"
>
  Object (configured depth: 2)
</button>
`;
